--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -1,3 +1,8 @@
+.header_btns p{
+  font-size: 17px;
+}
+
+
 #map {
     width: 100%;
     height: 100%;
@@ -27,7 +32,7 @@
 
 #current-servers {
     width: 100%;
-    height: 300px;
+    height: 150px;
     background-color: #D3D3D3;
     overflow-y: auto;
 }
@@ -59,8 +64,53 @@
     align-items: center;
     text-align: left;
 }
+#current-Groupservers {
+    width: 100%;
+    height: 300px;
+    background-color: #D3D3D3;
+    overflow-y: auto;
+}
+
+#current-Groupservers ul {
+    -webkit-padding-start: 0;
+    -moz-padding-start: 0;
+}
+
+#current-Groupservers li {
+    position: relative;
+    list-style: none;
+    padding: 5px;
+    cursor: default;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: left;
+}
+#current-Groupservers li ul {
+  display: block;
+}
 
 .server-name {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    max-width: 218px;
+    word-break: break-all;
+}
+.group-name {
     -webkit-box-flex: 1;
     -webkit-flex: 1 1 auto;
     -ms-flex: 1 1 auto;
