--- a/tethysapp/crazysearch/templates/crazysearch/base.html
+++ b/tethysapp/crazysearch/templates/crazysearch/base.html
@@ -13,6 +13,7 @@
 {% block app_title %}{{ tethys_app.name }}{% endblock %}
 {% block header_buttons %}
 
+
 <div class="header-button glyphicon-button" data-toggle="tooltip" data-placement="bottom" title="Manage HydroServers">
   <!-- <a data-toggle="modal" data-target="#modalInterface"><span class="glyphicon glyphicon-list-alt"></span></a> -->
 </div>
@@ -32,16 +33,16 @@
   		<button id="load-mapconsole" class="btn btn-primary" data-toggle="modal" data-target="#modalMapConsole">Explore Map Console</button>
   	</li>
   </div> -->
-  <br>
+  <!-- <br> -->
   <!--The Hydroservers are added to this box-->
-  <li>
-    <select class="selectpicker">
-      <option>Mustard</option>
-      <option>Ketchup</option>
-      <option>Relish</option>
-    </select>
-  </li>
-  <li>
+  <!-- <li> -->
+    <!-- <select class="selectpicker show-tick" data-style="btn-primary"> -->
+      <!-- <option>Select a group of Hydroservers</option> -->
+
+    <!-- </select> -->
+  <!-- </li> -->
+
+  <!-- <li>
     <div class="accordion" id="accordion_servers">
   	  <div class="card">
   	    <div class="card-header" id="headingOne">
@@ -83,7 +84,7 @@
   </li>
   <br>
   <button class="btn btn-primary" data-toggle="modal" data-target="#modalInterface2"> <span class="glyphicon glyphicon-list-alt"></span> Add or Delete Catalogs</button>
-  <br>
+  <br> -->
 
 {% endblock %}
 
@@ -95,11 +96,21 @@
 
 {% block content_dependent_styles %}
   {{ block.super }}
-  <link  href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  <link data-require="bootstrap@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+
+  <!-- <link  href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
+
+
   <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="{% static 'crazysearch/vendor/contextMenu/contextMenu.css' %}" rel="stylesheet" />
+
   <link href="{% static 'crazysearch/vendor/openlayers/ol.css' %}" rel="stylesheet">
   <link href="{% static 'crazysearch/css/main.css' %}" rel="stylesheet"/>
+
 {% endblock %}
 
 {% block scripts %}
@@ -109,8 +120,16 @@
   	baseStatic = baseStatic.replace('\/index.html','');
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js" type="text/javascript"></script>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
+  <!-- <script data-require="bootstrap.js@3.3.6" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script> -->
+
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js" type="text/javascript"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.2.61/jspdf.min.js" type="text/javascript"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js" type="text/javascript"></script>
 
 
@@ -119,4 +138,8 @@
   <script src="{% static 'hydroexplorer/vendor/contextMenu/contextMenu.min.js' %}" async="async"></script>
   <script src="{% static 'hydroexplorer/vendor/openlayers/ol.js' %}" type="text/javascript"></script>
   <script src="{% static 'crazysearch/js/main.js' %}" type="text/javascript"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
+
 {% endblock %}
