--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -1,7 +1,8 @@
-.header_btns p{
-  font-size: 17px;
+.header-btns p{
+  font-size: 1.1em;
+  padding-top: 5%;
+  font-weight: bold;
 }
-
 
 #map {
     width: 100%;
