--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -21,6 +21,7 @@
 </li>
 <hr> -->
 <div class="accordion" id="groups_hydroservers">
+
   <div class="card">
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0">
@@ -31,39 +32,93 @@
         <button class="btn btn-danger" id="btn-delete-hydroserver-group"> <span class="glyphicon glyphicon-minus"></span> </button>
       </h2>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#groups_hydroservers">
       <div class="card-body">
         <div id="current-Groupservers">
-              <ul id="current-Groupservers-list"></ul>
+            <ul id="current-Groupservers-list"></ul>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="accordion" id="accordion_description">
   <div class="card">
      <div class="card-header" id="headingThree">
        <h2 class="mb-0">
-         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
            Hydro Group Info
          </button>
        </h2>
      </div>
-     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#groups_hydroservers">
        <div class="card-body">
          <div id="pop-up_description">
-
          </div>
        </div>
      </div>
    </div>
+
+   <div class="accordion" id="accordion_servers">
+     <div class="card">
+       <div class="card-header" id="headingOne">
+         <h5 class="mb-0">
+           <button class="btn btn-primary" data-toggle="collapse" data-target="#current-servers" aria-expanded="false" aria-controls="current-servers">
+             <b>Current HydroServers Added..</b><span class="glyphicon glyphicon-chevron-down">
+           </button>
+         </h5>
+       </div>
+       <div class="card-body">
+         <div id="current-servers" class="collapse" aria-labelledby="headingOne" data-parent="#groups_hydroservers">
+           <ul id="current-servers-list"></ul>
+         </div>
+       </div>
+     </div>
+   </div>
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="accordion" id="accordion_description">
+  <div class="card">
+     <div class="card-header" id="headingThree">
+       <h2 class="mb-0">
+         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+           Hydro Group Info
+         </button>
+       </h2>
+     </div>
+     <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#accordion_description">
+       <div class="card-body">
+         <div id="pop-up_description">
+         </div>
+       </div>
+     </div>
+   </div>
+</div> -->
 <!-- <div id="pop-up_description">
 
 </div> -->
 
-<li>
+<!-- <li>
   <div class="accordion" id="accordion_servers">
     <div class="card">
       <div class="card-header" id="headingOne">
@@ -80,7 +135,7 @@
       </div>
     </div>
   </div>
-</li>
+</li> -->
 
 
 
