--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -20,6 +20,9 @@
   </div>
 </li>
 <hr> -->
+
+<br>
+
 <div class="accordion" id="groups_hydroservers">
 
   <div class="card">
@@ -41,7 +44,6 @@
     </div>
   </div>
 
-
   <div class="card">
      <div class="card-header" id="headingThree">
        <h2 class="mb-0">
@@ -57,6 +59,8 @@
        </div>
      </div>
    </div>
+   
+   <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch" style="width:100%"> Group Keywords Search <span class="glyphicon glyphicon-eye-open" style="padding-left:0.5em"></span> </button>
 
    <div class="accordion" id="accordion_servers">
      <div class="card">
@@ -213,6 +217,7 @@
 {% include "crazysearch/modals/addHydroserver.html" %}
 {% include "crazysearch/modals/delServer.html" %}
 {% include "crazysearch/modals/addGroupHydroserver.html" %}
+{% include "crazysearch/modals/keywordSearch.html" %}
 
 
 
