--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -33,7 +33,7 @@
 
 #current-servers {
     width: 100%;
-    height: 150px;
+    height: auto;
     background-color: #D3D3D3;
     overflow-y: auto;
 }
@@ -103,6 +103,18 @@
   display: block;
 }
 
+.title-separators{
+  background-color:black;
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: center;
+  padding: 0 0 0 0;
+  color:white;
+
+
+}
+
 .server-name {
     -webkit-box-flex: 1;
     -webkit-flex: 1 1 auto;
@@ -118,4 +130,10 @@
     flex: 1 1 auto;
     max-width: 218px;
     word-break: break-all;
+}
+
+#pop-up_description2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
