--- a/tethysapp/crazysearch/templates/crazysearch/modals/keywordSearch.html
+++ b/tethysapp/crazysearch/templates/crazysearch/modals/keywordSearch.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <form id="modalKeyWordSearch" class="modal fade" role="dialog" action="delete/" method="POST">
     {% csrf_token %}
     <div class="modal-dialog">
@@ -45,7 +46,10 @@
                       </tr>
                   </tbody>
               </table>
+              <img id="soapAddLoading" class="view-file hidden" src="{% static 'crazysearch/images/loader.gif' %}" />
+
             </div>
+
             <div class="modal-footer">
                 <div class="button-group">
                     <button type="button" id="btn-key-search" class="btn btn-primary">Seach Keywords</button>
