--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -39,27 +39,12 @@
     <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#groups_hydroservers">
       <div class="card-body">
         <div id="current-Groupservers">
-            <ul id="current-Groupservers-list"></ul>
+            <!-- <ul id="current-Groupservers-list"></ul> -->
         </div>
       </div>
     </div>
   </div>
 
-  <!-- <div class="card">
-     <div class="card-header" id="headingThree">
-       <h2 class="mb-0">
-         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-           Hydro Group Info
-         </button>
-       </h2>
-     </div>
-     <div id="collapseThree" class="collapse show" aria-labelledby="headingThree" data-parent="#groups_hydroservers">
-       <div class="card-body">
-         <div id="pop-up_description">
-         </div>
-       </div>
-     </div>
-   </div> -->
 
    <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch" style="width:100%"> Group Keywords Search <span class="glyphicon glyphicon-eye-open" style="padding-left:0.5em"></span> </button>
 
