The title was reaplaced with a button, so it looks more elegant when separating hydroservers groups.

--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -35,6 +35,7 @@
     width: 100%;
     height: auto;
     background-color: #D3D3D3;
+    /* background-color: black; */
     overflow-y: auto;
 }
 
@@ -103,17 +104,15 @@
   display: block;
 }
 
-.title-separators{
+/* .title-separators{
   background-color:black;
   width: 100%;
-  height: max-content;
+  height: 100%;
   display: flex;
   justify-content: center;
   padding: 0 0 0 0;
   color:white;
-
-
-}
+} */
 
 .server-name {
     -webkit-box-flex: 1;
@@ -135,5 +134,10 @@
 #pop-up_description2 {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.no_groups_tag{
+  color: #cc2418;
   align-items: center;
 }
