style issues with iverflow in x and y, and also in the tethys image below

--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -141,3 +141,13 @@
   color: #cc2418;
   align-items: center;
 }
+#app-content-wrapper #app-content #app-navigation{
+  padding: 2% 0.2%;
+  overflow-x: hidden;
+}
+#app-content-wrapper #app-content #app-navigation .nav{
+  overflow-x: hidden;
+}
+#app-content-wrapper{
+  overflow-y: hidden;
+}
