--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -28,12 +28,14 @@
 
   <div class="card">
     <div class="card-header" id="headingTwo">
-      <h2 class="mb-0">
+      <h2 class="mb-0" style= "width:120%">
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
           Hydro Groups Added
         </button>
-        <button class="btn btn-primary" data-toggle="modal" data-target="#modalAddGroupServer"> <span class="glyphicon glyphicon-plus"></span> </button>
-        <button class="btn btn-danger" id="btn-delete-hydroserver-group"> <span class="glyphicon glyphicon-trash"></span> </button>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#modalAddGroupServer"> <span class="glyphicon glyphicon-plus"></span>
+        <button class="btn btn-danger" id="btn-delete-hydroserver-group"> <span class="glyphicon glyphicon-trash"></span>
+        <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch"> <span class="glyphicon glyphicon-search"></span>
+
       </h2>
     </div>
     <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#groups_hydroservers">
@@ -46,14 +48,13 @@
   </div>
 
 
-   <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch" style="width:100%"> Group Keywords Search <span class="glyphicon glyphicon-eye-open" style="padding-left:0.5em"></span> </button>
 
    <div class="accordion" id="accordion_servers">
      <div class="card">
        <div class="card-header" id="headingOne">
          <h5 class="mb-0">
-           <button class="btn btn-primary" data-toggle="collapse" data-target="#current-servers" aria-expanded="false" aria-controls="current-servers">
-             <b>Current HydroServers Added..</b><span class="glyphicon glyphicon-chevron-down">
+           <button class="btn btn-primary" data-toggle="collapse" data-target="#current-servers" aria-expanded="false" aria-controls="current-servers" style="width:100%">
+             <b>Current HydroServers Added</b>
            </button>
          </h5>
        </div>
