--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -12,6 +12,7 @@
     margin-top: -20px;
 }
 
+
 .hmbrgr-div {
     width: 22px;
     height: 22px;
@@ -104,15 +105,6 @@
   display: block;
 }
 
-/* .title-separators{
-  background-color:black;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 0 0 0 0;
-  color:white;
-} */
 
 .server-name {
     -webkit-box-flex: 1;
@@ -151,3 +143,5 @@
 #app-content-wrapper{
   overflow-y: hidden;
 }
+.toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
+ .toggle.ios .toggle-handle { border-radius: 20px; }
