--- a/tethysapp/crazysearch/templates/crazysearch/base.html
+++ b/tethysapp/crazysearch/templates/crazysearch/base.html
@@ -106,6 +106,9 @@
 
   <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+
   <link href="{% static 'crazysearch/vendor/contextMenu/contextMenu.css' %}" rel="stylesheet" />
 
   <link href="{% static 'crazysearch/vendor/openlayers/ol.css' %}" rel="stylesheet">
@@ -131,7 +134,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.2.61/jspdf.min.js" type="text/javascript"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js" type="text/javascript"></script>
-
+  
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 
   <script src="{% static 'crazysearch/vendor/bootstrap-notify.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'tethys_gizmos/vendor/d3_tooltip/d3.tip.v0.6.3.js' %}" type="text/javascript"></script>
