--- a/tethysapp/crazysearch/templates/crazysearch/base.html
+++ b/tethysapp/crazysearch/templates/crazysearch/base.html
@@ -130,12 +130,14 @@
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script> -->
 
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js" type="text/javascript"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.2.61/jspdf.min.js" type="text/javascript"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js" type="text/javascript"></script>
-  
+
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   <script src="{% static 'crazysearch/vendor/bootstrap-notify.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'tethys_gizmos/vendor/d3_tooltip/d3.tip.v0.6.3.js' %}" type="text/javascript"></script>
