--- a/tethysapp/crazysearch/templates/crazysearch/modals/keywordSearch.html
+++ b/tethysapp/crazysearch/templates/crazysearch/modals/keywordSearch.html
@@ -46,7 +46,7 @@
                       </tr>
                   </tbody>
               </table>
-              <img id="soapAddLoading" class="view-file hidden" src="{% static 'crazysearch/images/loader.gif' %}" />
+              <img id="KeywordLoading" class="view-file hidden" src="{% static 'crazysearch/images/loader.gif' %}" style="z-index:1000; position: absolute; margin-left:10%;" />
 
             </div>
 
