Reset Buntton created and aded to the home.html, and function reset_graphs created in the main.js

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -69,14 +69,16 @@
   <div id="graph">
 
     <div id="options">
-      <h3>Plot Option</h3>
-      <p> Variables for ... </p>
+      <h3> Select a Station</h3>
+      <p> Variables</p>
       <select id= "variables_graph" class="selectpicker" data-live-search="true" data-style="btn-info" width: '100%'>
         <option > No Variables Available . . .</option>
         <!-- <option >Hot Dog, Fries and a Soda</option>
         <option>Burger, Shake and a Smile</option>
         <option>Sugar, Spice and all things nice</option> -->
       </select>
+      <br>
+      <button type="button" id= "reset_graphs" class="btn btn-danger">Reset Plot</button>
       <br>
       <br>
       <p>Type of plots</p>
