Name of the site displays now on the graph portion of it. Next step is to remove the name of the site from the graph title

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -69,7 +69,7 @@
   <div id="graph">
 
     <div id="options">
-      <h3> Select a Station</h3>
+      <h3 id= "siteName_title"> Select a Station</h3>
       <p> Variables</p>
       <select id= "variables_graph" class="selectpicker" data-live-search="true" data-style="btn-info" width: '100%'>
         <option > No Variables Available . . .</option>
