notification when no feature layer was selected and also trying to nest the scatter plot on it.

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -82,10 +82,10 @@
       <br>
       <br>
       <p>Type of plots</p>
-      <select class="selectpicker">
+      <select id="type_graph_select" class="selectpicker">
         <option>Select your plot . .</option>
         <option>Scatter</option>
-        <option>Whisker and Box Plot</option>
+        <option>Data Bar Chart</option>
         <option>Option 3</option>
         <option>Option 4</option>
       </select>
