Whisker and BOx plot added to the program

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -75,8 +75,7 @@
           <option> Pie </option>
           <option> Bar </option>
           <option> Scatter </option>
-
-
+          <option> Whisker and Box </option>
         </select>
         <button type="button" id= "reset_graphs" class="btn btn-danger" data-width="fit">Reset</button>
       </p>
