Better UI with the add of three rows for the management of the graph data. For each point.

--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -35,29 +35,42 @@
   width: 100%;
   height: 100%;
   /* position: fixed; */
-  flex:1 1 70%;
+  flex:1 1 60%;
   order: 1;
   overflow-y: hidden;
 }
 #graph{
-  flex: 1 1 30%;
+  flex: 1 1 40%;
   order: 2;
   width: 100%;
   height: 100%;
   display: none;
+  overflow-y: scroll;
 }
 
 #options{
   padding-left: 2%;
-  flex: 1 1 10%;
+  flex: 1 1 20%;
   order: 1;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
+#variables_id{
+  padding-top: 2%;
+  padding-left: 2%;
+  flex: 1 1 30%;
+  order: 1;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: scroll;
 
+
+}
 #plots{
-  flex: 1 1 90%;
-  order: 2;
+  flex: 1 1 50%;
+  order: 3;
   width: 100%;
   height: 100%;
 }
@@ -212,7 +225,32 @@
 #options p {
   /* font-weight: bold; */
 }
+#options em {
+  font-weight: bold;
+}
 #plots{
   padding:  0 0 0 0;
-
 }
+
+/* #siteVariableTable {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#siteVariableTable td, #siteVariableTable th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#siteVariableTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#siteVariableTable tr:hover {background-color: #ddd;}
+
+#siteVariableTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+} */
