--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -57,7 +57,7 @@
   overflow-y: scroll;
 }
 #variables_id{
-  padding-top: 2%;
+  /* padding-top: 2%; */
   padding-left: 2%;
   flex: 1 1 30%;
   order: 1;
