--- a/tethysapp/crazysearch/templates/crazysearch/modals/keywordSearch.html
+++ b/tethysapp/crazysearch/templates/crazysearch/modals/keywordSearch.html
@@ -6,7 +6,9 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Key Words in the Hydroserver Group</h4>
-                <p> Select from the following keywords to filter the hydroservers that do not contain such keyword/keywords</p>
+                <p> Select from the following keywords to filter the hydroservers that do not contain such keyword/keywords
+                <em>Note: Everytime the user selects a keyword, this one is added, and the search is done using an "OR". In other words,
+                the search will give any server that has at least one of the selected keywords</em></p>
             </div>
             <div class="modal-body">
               <table id="data-table" class="table table-striped table-bordered nowrap" width="100%">
