--- a/tethysapp/crazysearch/templates/crazysearch/base.html
+++ b/tethysapp/crazysearch/templates/crazysearch/base.html
@@ -121,6 +121,11 @@
   <script>
   	var baseStatic = "{% static 'crazysearch/index.html' %}";
   	baseStatic = baseStatic.replace('\/index.html','');
+    var endpointGeoServer = "{{ geoEndpoint|safe }}";
+    var geoServerWorkspace = "{{ geoWorkspace|safe }}";
+    var geoServerLayer = "{{ geoLayer|safe }}";
+    var geoServerColor = "{{ geoColor|safe }}";
+    var geoServerWidth = "{{ geoWidth|safe }}";
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
