--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -44,7 +44,8 @@
   order: 2;
   width: 100%;
   height: 100%;
-  display: none;
+  display: none !important;
+  /* visibility: hidden; */
   overflow-y: scroll;
 }
 
