Bootstrap data togle was adde for the graphs .. no functionality yet

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -15,12 +15,12 @@
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0" style= "width:120%">
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Hydro Groups Added
+          HydroGroups
         </button>
         <button class="btn btn-primary" data-toggle="modal" data-target="#modalAddGroupServer"> <span class="glyphicon glyphicon-plus"></span>
         <button class="btn btn-danger" id="btn-delete-hydroserver-group"> <span class="glyphicon glyphicon-trash"></span>
-        <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch"> <span class="glyphicon glyphicon-search"></span>
-
+        <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch"> <span class="glyphicon glyphicon-search"></span></button>
+        <input id="blockPosition" type="checkbox" checkeddata-toggle="toggle" data-on="<span class='glyphicon glyphicon-picture'></span>" data-off="<span class='glyphicon glyphicon-picture'></span>" data-size="small" data-onstyle = "danger">
       </h2>
     </div>
     <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#groups_hydroservers">
