--- a/tethysapp/crazysearch/templates/crazysearch/base.html
+++ b/tethysapp/crazysearch/templates/crazysearch/base.html
@@ -121,11 +121,25 @@
   <script>
   	var baseStatic = "{% static 'crazysearch/index.html' %}";
   	baseStatic = baseStatic.replace('\/index.html','');
+    var can_block_map = {{can_block_map|yesno:"true,false"}};
+    console.log(can_block_map);
+    var can_delete_hydrogroups = {{can_delete_hydrogroups|yesno:"true,false"}};
+    console.log(can_delete_hydrogroups);
+    // if(can_block_map && can_delete_hydrogroups){
     var endpointGeoServer = "{{ geoEndpoint|safe }}";
     var geoServerWorkspace = "{{ geoWorkspace|safe }}";
     var geoServerLayer = "{{ geoLayer|safe }}";
     var geoServerColor = "{{ geoColor|safe }}";
     var geoServerWidth = "{{ geoWidth|safe }}";
+    // }
+    // else{
+    //   var endpointGeoServer = false;
+    //   var geoServerWorkspace = false;
+    //   var geoServerLayer = false
+    //   var geoServerColor = false;
+    //   var geoServerWidth = false;
+    // }
+
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
