Added the lat and long to the layer properties as well

--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -44,7 +44,8 @@
   order: 2;
   width: 100%;
   height: 100%;
-  display: none !important;
+  /* display: none !important; */
+  display: none;
   /* visibility: hidden; */
   overflow-y: scroll;
 }
