--- a/tethysapp/crazysearch/public/css/main.css
+++ b/tethysapp/crazysearch/public/css/main.css
@@ -143,7 +143,8 @@
 }
 #current-Groupservers {
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
+    height: 700px;
     background-color: #D3D3D3;
     overflow-y: auto;
 }
@@ -248,6 +249,23 @@
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
   padding-left:0;
 }
+.ui-state-default.buttonAppearance{
+    /* margin: 40px; */
+    display: block;
+    height: auto;
+    width: auto;
+    /* font-size: 65px; */
+    background: #286090 !important;
+    /* border: 2px solid white; */
+    border-color: #204d74 !important;
+    color: white;
+    transition: all 0.2s linear 0s;
+}
+/* .buttonAppearance:hover{
+  background-color: #5bc0de !important;
+  border-color:#46b8da !important;
+  color: white;
+} */
 
 /* #siteVariableTable {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
