Change UI to only show the combine of the two list, osonly one list of hydro groups with they hydroservers

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -35,8 +35,9 @@
       </div>
     </div>
   </div>
+  <input id="sG" type="checkbox" data-toggle="toggle" data-on="<span class='glyphicon glyphicon-signal'></span>" data-off="<span class='glyphicon glyphicon-signal'></span>" data-size="small" data-onstyle = "danger">
 
-   <div class="accordion" id="accordion_servers">
+   <!-- <div class="accordion" id="accordion_servers">
      <div class="card">
        <div class="card-header" id="headingOne">
          <h5 class="mb-0" style= "display:inline-block; width:80%">
@@ -52,7 +53,7 @@
          </div>
        </div>
      </div>
-   </div>
+   </div> -->
 
 
 </div>
