Change color to show that it is a dangerous button, to give some warning to the user

--- a/tethysapp/crazysearch/templates/crazysearch/modals/DeleteHydroWarning.html
+++ b/tethysapp/crazysearch/templates/crazysearch/modals/DeleteHydroWarning.html
@@ -14,7 +14,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" id="btn-delete-hydroserver-group" class="btn btn-primary">Proceed and Delete</button>
+        <button type="button" id="btn-delete-hydroserver-group" class="btn btn-danger">Proceed and Delete</button>
       </div>
     </div>
   </div>
