Change of UI porposal. The tools are below the hydroservers title, and the collapsable accordion of boostrap is just a blue lng line that needs to be fixed to hide all the possible hyroservers on it

--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -10,51 +10,33 @@
 
 
 <div class="accordion" id="groups_hydroservers">
+  <button class="btn btn-primary btn-lg btn-block">HydroServers</button>
+  <br>
+
+  <button class="btn btn-primary" data-toggle="modal" data-target="#modalAddGroupServer"> <span class="glyphicon glyphicon-plus"></span>
+  {% if can_delete_hydrogroups %}
+  <button class="btn btn-danger"  data-toggle="modal" data-target="#DeleteWarning"> <span class="glyphicon glyphicon-trash"></span>
+  {% endif %}
+  <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch"> <span class="glyphicon glyphicon-search"></span></button>
+  {% if can_block_map %}
+  <input id="blockPosition" type="checkbox" checked data-toggle="toggle" data-on="<span class='glyphicon glyphicon-picture'></span>" data-off="<span class='glyphicon glyphicon-picture'></span>" data-size="small" data-onstyle = "danger">
+  {% endif %}
+  <input id="sG" type="checkbox" data-toggle="toggle" data-on="<span class='glyphicon glyphicon-signal'></span>" data-off="<span class='glyphicon glyphicon-signal'></span>" data-size="small" data-onstyle = "danger">
 
   <div class="card">
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0" style= "width:120%">
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          HydroGroups
+        <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
         </button>
-        <button class="btn btn-primary" data-toggle="modal" data-target="#modalAddGroupServer"> <span class="glyphicon glyphicon-plus"></span>
-        {% if can_delete_hydrogroups %}
-        <button class="btn btn-danger"  data-toggle="modal" data-target="#DeleteWarning"> <span class="glyphicon glyphicon-trash"></span>
-        {% endif %}
-        <button class="btn btn-success" data-toggle="modal" data-target="#modalKeyWordSearch"> <span class="glyphicon glyphicon-search"></span></button>
-        {% if can_block_map %}
-        <input id="blockPosition" type="checkbox" checked data-toggle="toggle" data-on="<span class='glyphicon glyphicon-picture'></span>" data-off="<span class='glyphicon glyphicon-picture'></span>" data-size="small" data-onstyle = "danger">
-        {% endif %}
       </h2>
     </div>
     <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#groups_hydroservers">
       <div class="card-body">
         <div id="current-Groupservers">
-            <!-- <ul id="current-Groupservers-list"></ul> -->
         </div>
       </div>
     </div>
   </div>
-  <input id="sG" type="checkbox" data-toggle="toggle" data-on="<span class='glyphicon glyphicon-signal'></span>" data-off="<span class='glyphicon glyphicon-signal'></span>" data-size="small" data-onstyle = "danger">
-
-   <!-- <div class="accordion" id="accordion_servers">
-     <div class="card">
-       <div class="card-header" id="headingOne">
-         <h5 class="mb-0" style= "display:inline-block; width:80%">
-           <button class="btn btn-primary" data-toggle="collapse" data-target="#current-servers" aria-expanded="false" aria-controls="current-servers"style= "width:100%" >
-             <b>HydroServers Added</b>
-          </h5>
-          <input id="sG" type="checkbox" data-toggle="toggle" data-on="<span class='glyphicon glyphicon-signal'></span>" data-off="<span class='glyphicon glyphicon-signal'></span>" data-size="small" data-onstyle = "danger">
-
-       </div>
-       <div class="card-body">
-         <div id="current-servers" class="collapse show" aria-labelledby="headingOne" data-parent="#groups_hydroservers">
-           <ul id="current-servers-list"></ul>
-         </div>
-       </div>
-     </div>
-   </div> -->
-
 
 </div>
 
