--- a/tethysapp/crazysearch/templates/crazysearch/home.html
+++ b/tethysapp/crazysearch/templates/crazysearch/home.html
@@ -22,12 +22,14 @@
   <input id="blockPosition" type="checkbox" checked data-toggle="toggle" data-on="<span class='glyphicon glyphicon-picture'></span>" data-off="<span class='glyphicon glyphicon-picture'></span>" data-size="small" data-onstyle = "danger">
   {% endif %}
   <input id="sG" type="checkbox" data-toggle="toggle" data-on="<span class='glyphicon glyphicon-signal'></span>" data-off="<span class='glyphicon glyphicon-signal'></span>" data-size="small" data-onstyle = "danger">
-
-  <div class="card">
+  <br></br>
+  <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo"> </button>
+  <br>
+  <div class="panel-group" id="current-Groupservers" role="tablist" aria-multiselectable="true"></div>
+  <!-- <div class="card">
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0" style= "width:120%">
-        <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-        </button>
+
       </h2>
     </div>
     <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#groups_hydroservers">
@@ -36,7 +38,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 </div>
 
